--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				required
 				/>
 
-				<input name="redirectTo" type="hidden" value="https://cosmox.netlify.app/thank-you.html" />	
+				<input name="redirectTo" type="hidden" value="https://cosmox.netlify.app/tnks_1.html" />	
 				<div class="valid-feedback">Email Válido.</div>
 				<div class="invalid-feedback">Por favor, digite um email válido.</div>
 			</div>
