alteração nome do site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="utf-8">
 	<!-- Title -->
-	<title>Landing Page</title>
+	<title>Amadx</title>
 
 	<!-- Logo -->
 	<link rel="shortcut icon" href="" >
@@ -84,7 +84,7 @@
 				required
 				/>
 
-				<input name="redirectTo" type="hidden" value="https://cosmox.netlify.app/tnks_1.html" />	
+				<input name="redirectTo" type="hidden" value="https://amadx.netlify.app/tnks_1.html" />	
 				<div class="valid-feedback">Email Válido.</div>
 				<div class="invalid-feedback">Por favor, digite um email válido.</div>
 			</div>
