--- a/tnks_1.html
+++ b/tnks_1.html
@@ -42,7 +42,7 @@
                        <img src="images/correct.png" class="figure-img img-fluid rounded mb-5" width="8%" alt="" ></br>
                     <h7 class="mb-5">Muito obrigado por ter feito o cadastro!</h7></br>
                     <h7>Muito obrigado por ter feito o cadastrsksdijasijdojsaedjasjidasjidjaodjoasdajosdioo!</h7> </br>  </br>      
-                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'https://cosmox.netlify.app/index.html'">Acessa Home Page</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href = 'https://amadx.netlify.app/index.html'">Acessa Home Page</button>
                     </center>
                     </div>
                 </div>
