--- a/tnks_1.html
+++ b/tnks_1.html
@@ -13,7 +13,7 @@
 
      <!-- NAV  -->
      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1b1b1e;">
-		<a class="navbar-brand" href="index.html">Home</a>
+		<a class="navbar-brand" href="images/logo.png">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
