--- a/tnks_1.html
+++ b/tnks_1.html
@@ -13,8 +13,9 @@
 
      <!-- NAV  -->
      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1b1b1e;">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="Logo" style="width:40px;">
+        </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
