--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 
 	<!-- Responsive NavBar -->
 
-	<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1b1b1e;">
-		<a class="navbar-brand" href="index.html">Home</a>
+	<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #ffffff;">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="Logo" style="width:50px;">
+        </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -58,7 +60,7 @@
 
 	 <!-- BANNER AGRADECIMENTO--> 
     <header>
-		<div class="jumbotron jumbotron-fluid intro" style="background-color: rgb(185, 212, 236);" >
+		<div class="jumbotron jumbotron-fluid intro" style="background-color:#9400D3;" >
 			<div class="container">
 				<div class="row">
 				
