--- a/tnks_1.html
+++ b/tnks_1.html
@@ -12,7 +12,7 @@
 <body>
 
      <!-- NAV  -->
-     <nav class="navbar navbar-expand-sm navbar-brand navbar-dark" style="background-color: #1b1b1e;">
+     <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="background-color: #ffffff;">
         <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="Logo" style="width:40px;">
         </a>
