--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#sobre">Sobre</a>
+					<a class="nav-link" href="#sobre" style="color: #9400D3; font-weight: bold;">Sobre</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#criterios">Critérios</a>
+					<a class="nav-link" href="#criterios" style="color: #9400D3; font-weight: bold;">Critérios</a>
 				</li>   
 			</ul>
 		</div>  
