--- a/tnks_1.html
+++ b/tnks_1.html
@@ -12,9 +12,9 @@
 <body>
 
      <!-- NAV  -->
-     <nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="background-color: #ffffff;">
+     <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #ffffff;">
         <a class="navbar-brand" href="#">
-            <img src="images/logo.png" alt="Logo" style="width:40px;">
+            <img src="images/logo.png" alt="Logo" style="width:50px;">
         </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#sobre">Sobre</a>
+					<a class="nav-link" href="#sobre" style="color: #9400D3; font-weight: bold;">Sobre</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#criterios">Critérios</a>
+					<a class="nav-link" href="#criterios" style="color: #9400D3; font-weight: bold;">Critérios</a>
 				</li>   
 			</ul>
 		</div>  
