--- a/tnks_1.html
+++ b/tnks_1.html
@@ -13,7 +13,7 @@
 
      <!-- NAV  -->
      <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #ffffff;">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://amadx.com.br">
             <img src="images/logo.png" alt="Logo" style="width:50px;">
         </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
