--- a/tnks_1.html
+++ b/tnks_1.html
@@ -6,30 +6,45 @@
     <title>Obrigado!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style_tks.css">
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
     
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171051492-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-171051492-1');
+	</script>
+    <!-- Facebook Pixel Code -->
+<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window, document,'script',
+	'https://connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '575088513376454');
+	fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	src="https://www.facebook.com/tr?id=575088513376454&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
 </head>
 <body>
 
-     <!-- NAV  -->
-     <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #ffffff;">
-        <a class="navbar-brand" href="https://amadx.com.br">
-            <img src="images/logo.png" alt="Logo" style="width:50px;">
-        </a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="collapsibleNavbar">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#sobre" style="color: #9400D3; font-weight: bold;">Sobre</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#criterios" style="color: #9400D3; font-weight: bold;">Critérios</a>
-				</li>   
-			</ul>
-		</div>  
-	</nav>
+    <!--CONTAINER TOPO-->
+	<div class="container-fluid">
+        <div id="top-container">
+			<img class="float-left img-fluid" src="images/logo.png" style="height: 60px; padding-top: 10px;">
+			<h1 class="float-left" style="padding-top: 10px; padding-left: 10px; font-family: 'MuseoModerno', cursive; color: #9400D3;">Amadx</h1>
+		</div>
+    </div> 
     <!--INICIO HEADER COM BANNER-->
 
     <header>
