--- a/tnks_1.html
+++ b/tnks_1.html
@@ -62,7 +62,7 @@
                         <h1 class="t1"> Thank You!!</h1>
 
                         <h5 class="t2">Muito obrigado por ter feito o cadastro!</h5></br>
-                        <h7 class="t2"><a href="www.facebook.com" ><i>Voltar para a HomePage</i> </a></h7> </br> </br>
+                        <h7 class="t2"><a href="www.facebook.com" ><i>Voltar para a HomePag</i> </a></h7> </br> </br>
                         <hr style="height:1.5px;width:66%;color:white;background-color:white">
                     
                     </div>
