Alteração cabeçalho thank you page

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -38,14 +38,10 @@
 </head>
 <body>
 
-    <!--CONTAINER TOPO-->
-
-	<div class="container-fluid">
-        <div id="top-container">
-			<img class="float-left img-fluid" src="images/logo.png" style="height: 60px; padding-top: 10px;">
-			<h1 class="float-left" style="padding-top: 10px; padding-left: 10px; font-family: 'MuseoModerno', cursive; color: #9400D3;">Amadx</h1>
-		</div>
-    </div> 
+   <!--CABEÇALHO-->
+	<div class="container-fluid container-sm|md|lg|xl">
+		<img src="images/amadx_logo_mob-8.png" class="mx-auto d-block" style="height: 100px;">
+	</div>
     <!--INICIO HEADER COM BANNER-->
     <br>
     <br>
