Add mudaças index

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="container-fluid container-sm|md|lg|xl" style="background-color:#9400D3; height: auto;" >
 			<div class="container">
 				
-				<h1 class="text-center" style="font-family: 'MuseoModerno', cursive; color: #fff; padding-top: 80px; font-size: 50px;">O que você gostaria de fazer mas não cabe nas suas 24?</h1>
+				<h1 class="text-center" style="font-family: 'MuseoModerno', cursive; color: #fff; padding-top: 80px; font-size: 50px;">O que você gostaria de fazer mas não cabe nas suas 24 horas?</h1>
 				
 				<!--LISTA-->
 				<div class="container w-80 p-3">
