adição da página desktop e atualização do index

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
 	src="https://www.facebook.com/tr?id=575088513376454&ev=PageView&noscript=1"
 	/></noscript>
 	<!-- End Facebook Pixel Code -->
+	<!-- Hotjar Tracking Code for amadx.com.br -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1878885,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body>
   
@@ -144,7 +155,6 @@
 							<div class="invalid-feedback">Por favor, digite um email válido.</div>
 						</div>
 						<input name="redirectTo" type="hidden" value="https://amadx.com.br/tnks_1.html" />
-						<input name="debugMode" class= "form-control"type="hidden" value="true" />
 						<button type="submit" class="btn btn-dark btn-block" style="font-family: 'Nunito Sans', sans-serif; border-radius: 25px; background-color: #FFB90F; color: blueviolet; font-weight: bold; text-transform: uppercase;">
 							<span class="spinner-grow spinner-grow-sm"></span>
 							Quero Participar
