páginas mobile e desktop em versões finais

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>Amadx</title>
+    <title>Amadx - Aqui você é mais Beloved</title>
     <!-- Logo -->
     <link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
     
