--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<!-- Title -->
-	<title>Amadx</title>
+	<title>Amadx - Aqui você é mais Beloved</title>
 
 	<!-- Logo -->
 	<link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
 </head>
 <body>
+    <h1></h1>
 	<script>
 		var ua = navigator.userAgent.toLowerCase();
 		var uMobile = '';
