--- a/mobile.html
+++ b/mobile.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="utf-8">
 	<!-- Title -->
-	<title>Amadx</title>
+	<title>Amadx - Aqui você é mais Beloved</title>
 
 	<!-- Logo -->
 	<link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
