--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="CosmoX">
+    <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 	<!-- Title -->
 	<title>Amadx - Aqui você é mais Beloved</title>
 
