--- a/mobile.html
+++ b/mobile.html
@@ -3,6 +3,10 @@
 <head>
 	
 	<meta charset="utf-8">
+    <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="CosmoX">
+    <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 	<!-- Title -->
 	<title>Amadx - Aqui você é mais Beloved</title>
 
@@ -69,8 +73,17 @@
 <body>
   
 	<!--CABEÇALHO-->
+	<section id="redes" style="padding-top: 20px;">
+		<div class="rede" id="facebook">
+			<a href="https://www.facebook.com/Amadx-110455760724284"><img src="images/facebook.png" class="icone"></a>
+		</div>
+		<div class="rede" id="instagram">
+			<a href="http://instagram.com/amadx_br"><img src="images/instagram.png" class="icone"></a>
+		</div>
+	</section>
 	<div class="container-fluid container-sm|md|lg|xl">
 		<img src="images/amadx_logo_mob-8.png" class="mx-auto d-block" style="height: 100px;">
+		
 	</div>
 
 	<!--CORPO-->
