adição de favicons

--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,7 @@
 	<title>Amadx - Aqui você é mais Beloved</title>
 
 	<!-- Logo -->
-	<link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
+	<link rel="shortcut icon" href="images/apple-icon-72x72.png" >
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css" >
