--- a/tnks_1.html
+++ b/tnks_1.html
@@ -11,7 +11,7 @@
     <!-- Title -->
     <title>Amadx - Aqui você é mais Beloved</title>
     <!-- Logo -->
-    <link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
+    <link rel="shortcut icon" href="images/ms-icon-310x310.png" >
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style_tks.css">
