--- a/desktop.html
+++ b/desktop.html
@@ -11,7 +11,7 @@
 	<title>Amadx</title>
 
 	<!-- Logo -->
-	<link rel="shortcut icon" href="images/amadx_logo_desk-8.png" >
+	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/desktop.css">
