migração do desktop para o index.html

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -82,7 +82,7 @@
     <br>
     <header>
 
-        <div class="jumbotron jumbotron-fluid  " style="background-color: blueviolet;">
+        <div class="jumbotron jumbotron-fluid  " style="background-color: #761498;">
 		
             <div class="container">
     
