migração do desktop para o index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/desktop.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno&family=Nunito+Sans&display=swap" rel="stylesheet">
 
 
