--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="pt-br">
 <head>
 	
+	<!--METAS-->
     <meta charset="utf-8">
     <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="CosmoX">
     <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
+	
 	<!-- Title -->
-	<title>Amadx</title>
+	<title>Amadx - Aqui você é mais Beloved</title>
 
-	<!-- Logo -->
+	<!-- Logo - Favicon -->
 	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno&family=Nunito+Sans&display=swap" rel="stylesheet">
-
 
 	<!-- Scripts -->
 	<script src="js/script.js" type="text/javascript"></script>
@@ -70,7 +70,7 @@
 	</script>
 </head>
 <body>
-    <h1></h1>
+	<!--SCRIPT DE REDIRECIONAMENTO-->
 	<script>
 		var ua = navigator.userAgent.toLowerCase();
 		var uMobile = '';
@@ -96,8 +96,7 @@
         <img id="logodesk" src="images/amadx_logo_desk-8.png" class="mx-auto float-left" style="height: 100px;">
         <section id="redes" style="padding-top: 12px;">
             <div class="rede" id="facebook">
-                <a href="https://www.facebook.com/Amadx-110455760724284"><img src="images/facebook.png" class="icone"></a>
-                
+                <a href="https://www.facebook.com/Amadx-110455760724284"><img src="images/facebook.png" class="icone"></a>     
             </div>
             <div class="rede" id="instagram">
                 <a href="http://instagram.com/amadx_br"><img src="images/instagram.png" class="icone"></a>
@@ -284,6 +283,6 @@
             </div>
         </div>
     </div>
-        <img class="img-fluid mx-auto d-block" style="height: 120px;" src="images/amadx_logo_mob-8.png">
+    <img class="img-fluid mx-auto d-block" style="height: 120px;" src="images/amadx_logo_mob-8.png">
 </body>
 </html>
