atualizações no desempenho da página

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 	<!-- Scripts -->
 	<script src="js/script.js" type="text/javascript"></script>
+	<!--PRELOADS-->
+	<link rel="preload" href="css/style.css" as="style">
+  	<link rel="preload" href="js/script.js" as="script">
 
 	<!-- BOOTSTRAP -->
 	<!-- CSS only -->
