--- a/mobile.html
+++ b/mobile.html
@@ -15,12 +15,14 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css" >
+	<!-- Scripts -->
+	<script src="js/script.js" type="text/javascript"></script>
 
 	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno&family=Nunito+Sans&display=swap" rel="stylesheet">
 
-
-	<!-- Scripts -->
-	<script src="js/script.js" type="text/javascript"></script>
+	<!--PRELOADS-->
+	<link rel="preload" href="css/style.css" as="style">
+  	<link rel="preload" href="js/script.js" as="script">
 
 	<!-- BOOTSTRAP -->
 	<!-- CSS only -->
