atualizações no desempenho da página

--- a/mobile.html
+++ b/mobile.html
@@ -10,10 +10,6 @@
 	<!-- Title -->
 	<title>Amadx - Aqui você é mais Beloved</title>
 
-	<!--PRELOADS-->
-	<link rel="preload" href="css/style.css" as="style">
-  	<link rel="preload" href="js/script.js" as="script">
-
 	<!-- Logo -->
 	<link rel="shortcut icon" href="images/apple-icon-72x72.png" >
 
@@ -73,6 +69,13 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<!--PRELOADS-->
+<link rel="preload" href="/css/style.css" as="style">
+<link rel="preload" href="/js//script.js" as="script">
+<link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" as="style">
+<link rel="preload" href="https://code.jquery.com/jquery-3.5.1.slim.min.js" as="script">
+<link rel="preload" href="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" as="script">
+<link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" as="script">
 </head>
 <body>
   
