--- a/mobile.html
+++ b/mobile.html
@@ -20,7 +20,9 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno&family=Nunito+Sans&display=swap" rel="stylesheet">
 
-	
+	<!--PRELOADS-->
+	<link rel="preload" href="/css/style.css" as="style">
+	<link rel="preload" href="/js//script.js" as="script">	
 
 	<!-- BOOTSTRAP -->
 	<!-- CSS only -->
@@ -31,6 +33,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	
+	<!--TRACKING CODES-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171051492-1"></script>
 	<script>
@@ -40,7 +43,6 @@
 
 		gtag('config', 'UA-171051492-1');
 	</script>
-
 	<!-- Facebook Pixel Code -->
 	<script>
 		!function(f,b,e,v,n,t,s)
@@ -53,12 +55,12 @@
 		'https://connect.facebook.net/en_US/fbevents.js');
 		fbq('init', '814492759088576');
 		fbq('track', 'PageView');
-		</script>
-		<noscript><img height="1" width="1" style="display:none"
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
 		src="https://www.facebook.com/tr?id=814492759088576&ev=PageView&noscript=1"
-		/></noscript>
-		<!-- End Facebook Pixel Code -->
-		<!-- Hotjar Tracking Code for amadx.com.br -->
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+	<!-- Hotjar Tracking Code for amadx.com.br -->
 	<script>
     	(function(h,o,t,j,a,r){
 			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -69,9 +71,16 @@
 			a.appendChild(r);
 		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 	</script>
-<!--PRELOADS-->
-<link rel="preload" href="/css/style.css" as="style">
-<link rel="preload" href="/js//script.js" as="script">
+	<!-- Global site tag (gtag.js) - Google Ads: 792854533 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-792854533"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'AW-792854533');
+	</script>
+
 
 </head>
 <body>
