--- a/mobile.html
+++ b/mobile.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
     <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -17,9 +18,8 @@
 	<link rel="preload" href="css/style.css" as="style">
 	<link rel="preload" href="js/script.js" as="script">
 	<link rel="preload" href="css/bootstrap.min.css" as="style">
-	<link rel="preload" href="js/jQuery.js" as="script">
-	<link rel="preload" href="js/bootstrap.min.js.map" as="script">
-	
+	<link rel="preload" href="js/bootstrap.min.js" as="script">
+
 	<!-- Logo - Favicon -->
 	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
@@ -30,7 +30,8 @@
 	<!-- Scripts -->
 	<script src="js/script.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/jQuery.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	
 	<!--TRACKING CODES-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
