--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	
 	<!--METAS-->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nosso objetivo é ajudar as pessoas a terem mais tempo para si e conectar com as pessoas que amam.">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="CosmoX">
     <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
