--- a/tnks_1.html
+++ b/tnks_1.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+    <!--METAS-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A pílula Beloved está aqui para ajudar você a organizar sua rotina, ganhando momentos de lazer e relaxamento para melhora a sua qualidade de vida.">
+    <meta name="description" content="Nosso objetivo é ajudar as pessoas a terem mais tempo para si e conectar com as pessoas que amam.">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="CosmoX">
     <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
@@ -15,7 +17,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    
+
     <!--PRELOADS-->
 	<link rel="preload" href="css/style.css" as="style">
 	<link rel="preload" href="css/bootstrap.min.css" as="style">
