Att newpage and script

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+
+<!--GABRIEL SCRIPT-->
+<script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/39bd725b-d09a-417f-958d-fe1ff239e2c9-loader.js" ></script>
+
 </head>
 <body>
     <h1></h1>
