up da versão desktop

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -83,20 +83,13 @@
 </head>
 
 <body>
+    <div id="intro" class="jumbotron text-left" src="background web/Vector_11.svg">
+        <div class="container-fluid row">
+            <br>
+            </div>
+    </div>
 
-   <!--CABEÇALHO-->
-   <div class="container-fluid container-sm|md|lg|xl">
-    <!--LOGO-->
-    <img id="logodesk" src="images/amadx_logo_desk-8.png" class="mx-auto float-left" style="height: 100px;">
-    <!--REDES SOCIAIS-->
-    <section id="redes" style="padding-top: 12px;">
-        <div class="rede" id="facebook">
-            <a href="https://www.facebook.com/Amadx-110455760724284"><img src="images/facebook.png" class="icone"></a>            
-        </div>
-        <div class="rede" id="instagram">
-            <a href="http://instagram.com/amadx_br"><img src="images/instagram.png" class="icone"></a>
-        </div>
-    </section>
+   
     </div>
   
     <!--INICIO HEADER COM BANNER-->
