--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto d-block img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Dicas de apps para você fazer o que mais gosta</h2></div>
                         <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto d-block img-fluid col-sm-2 float-left"></div>
-                        <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Faça como gandes empresas e priorize</h2></div>
+                        <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Faça como grandes empresas e priorize</h2></div>
                 </div>
                 <div class="container-sm|md|lg|xl col-6" id="containerForm">
                     <div id="cadastro" class="container p-3 my-3" style="border-radius: 10px; width: 360px; box-shadow: 5px 5px grey;">
