--- a/quizz-prototipo.html
+++ b/quizz-prototipo.html
@@ -9,7 +9,7 @@
     <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 	<!-- Title -->
 	<title>Amadx</title>
-
+	<!-- Logo -->	
 	<!-- Logo -->
 	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
