correção versão temporária mobile

--- a/mobile.html
+++ b/mobile.html
@@ -163,17 +163,17 @@
 					<h2 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #fff; padding-top: 50px; font-size: 40px;">Ensinaremos um método para aplicar no seu estudo e trabalho</h1>
 				<br>
 				<hr style="height:0px;width:75%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 50px;">
-					<h1 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #FFB90F; padding-top: 50px; font-size: 50px;">Das grandes empresas para você!</h1>
+					<h1 class="text-center" style="color: #FFB90F; padding-top: 50px; font-size: 50px;">Das grandes empresas para você!</h1>
 				<hr style="height:0px;width:75%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 	10px;">
-					<h2 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #fff; padding-top: 50px; font-size: 40px;">Aprenda a priorizar suas tarefas e aplica imediatamente</h1>
+					<h2 class="text-center" style="color: #fff; padding-top: 50px; font-size: 40px;">Aprenda a priorizar suas tarefas e aplica imediatamente</h1>
 				<hr style="height:0px;width:50%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 50px;">
-					<h1 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #FFB90F; padding-top: 50px; font-size: 50px;">Dicas de aplicativos!</h1>
+					<h1 class="text-center" style="color: #FFB90F; padding-top: 50px; font-size: 50px;">Dicas de aplicativos!</h1>
 				<hr style="height:0px;width:50%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 	10px;">
-					<h2 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #fff; padding-top: 50px; font-size: 40px;">Modelos para você fazer mais do que gosta</h1>	
+					<h2 class="text-center" style="color: #fff; padding-top: 50px; font-size: 40px;">Modelos para você fazer mais do que gosta</h1>	
 				<hr style="height:0px;width:75%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 50px;">
-					<h1 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #FFB90F; padding-top: 50px; font-size: 50px;">Corre! Mas para se cadastrar!</h1>
+					<h1 class="text-center" style="color: #FFB90F; padding-top: 50px; font-size: 50px;">Corre! Mas para se cadastrar!</h1>
 				<hr style="height:0px;width:75%;color:#FFB90F;background-color:#FFB90F;position: relative;top: 	10px;">
-					<h2 class="text-center" style="font-family: 'Nunito Sans', cursive; color: #fff; padding-top: 50px; font-size: 40px;">O Beloved só ficará disponivel para quem se cadastrar até o dia 03 de Julho</h1>
+					<h2 class="text-center" style="color: #fff; padding-top: 50px; font-size: 40px;">O Beloved só ficará disponivel para quem se cadastrar até o dia 03 de Julho</h1>
 				
 				<br><br>
 
