--- a/tnks_1.html
+++ b/tnks_1.html
@@ -111,27 +111,12 @@
             <h5 id="fra3" class="">Compartilhe essa ideia.</h6>
         </div>
         <div class="container-fluid row" id="bot">
-            <a href="https://amadx.com.br" class="btn btn-secondary btn-lg active "role="button" aria-pressed="true">Acessar página inicial </a>
+            <a href="https://amadx.com.br" class="btn btn-secondary btn-lg active "role="button" aria-pressed="true" style="background-color: #761498;">Acessar página inicial </a>
         </div>
     </div>
     
 </section>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171051492-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-171051492-1');
-    </script>
-    </header>
-
-    <!-- BOOTSTRAP JAVA -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
 
 </body>
 </html>
