correção versão temporária mobile

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -111,7 +111,7 @@
             <h5 id="fra3" class="">Compartilhe essa ideia.</h6>
         </div>
         <div class="container-fluid row" id="bot">
-            <a href="https://amadx.com.br" class="btn btn-secondary btn-lg active "role="button" aria-pressed="true" style="background-color: #761498;">Acessar página inicial </a>
+            <a href="https://amadx.com.br" class="btn btn-secondary btn-lg active "role="button" aria-pressed="true" style="background: #761498;">Acessar página inicial </a>
         </div>
     </div>
     
