--- a/index.html
+++ b/index.html
@@ -111,22 +111,20 @@
     </head>
     <body>
         <!--CABEÇALHO-->
-	    <div class="container-fluid container-sm|md|lg|xl row">
+	    <div class="container-fluid container-sm|md|lg|xl mx-auto row" id="cabecalho">
             <div class="col-4"><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto float-left img-fluid w-50"></div>
-            <div class="col-4"><br></div>
-            <div class="col-1"><a href="https://www.facebook.com/Amadx-110455760724284"><img id=""facebook" src="images/FACE-8.png" class="mx-auto d-block img-fluid w-50" style="margin-top: 20px;"></a></div>
-            <div class="col-1"><a href="http://instagram.com/amadx_br"><img id="instagram" src="images/INSTA-8.png" class="mx-auto d-block img-fluid w-50" style="margin-top: 20px;"></a></div>
-            <div class="col-1"><br></div>
-            <div class="col-1"><br></div>	
+            <div class="col-6"><br></div>
+            <div class="col-1"><a href="https://www.facebook.com/Amadx-110455760724284"><img id=""facebook" src="images/FACE-8.png" class="img-fluid w-50 float-right" style="margin-top: 20px;"></a></div>
+            <div class="col-1"><a href="http://instagram.com/amadx_br"><img id="instagram" src="images/INSTA-8.png" class="img-fluid w-50 float-left" style="margin-top: 20px;"></a></div>	
         </div>
 
-        <div class="container-sm|md|lg|xl row" id="banner1">
-            <div class="container-sm|md|lg|xl col-6 row">
+        <div class="container-sm|md|lg|xl row mx-auto" id="banner1">
+            <div class="container-sm|md|lg|xl col-6 mx-auto row">
                 <div class="container-sm|md|lg|xl"><h1 id="chamadaDesktop">O que você quer fazer mas não cabe nas suas 24h?</h1></div>
                 <div class="container-sm|md|lg|xl"><h2 id="chamadaDesktop2" class="col-10">Organize sua rotina e melhore a qualidade de vida!</h2></div>
             </div>
-            <div id="relogio" class="container-sm|md|lg|xl col-6">
-                <div class="container-sm|md|lg|xl"><img src="images/relogio.png" class="img-fluid float-right"></div>
+            <div id="relogio" class="container-sm|md|lg|xl mx-auto col-6">
+                <img src="images/relogio.png" id="clock" class="img-fluid mx-auto d-block bottom">
             </div>
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block">
@@ -137,35 +135,35 @@
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid row" id="activities">
             <div id="livro" class="container-sm|md|lg|xl col-3 text-center mx-auto d-block">
-                <img src="images/LIVRO-1-8.png" class="mx-auto d-block img-fluid">
+                <img src="images/LIVRO-1-8.png" class="mx-auto d-block img-fluid"> <!--LIVRO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Ler aquele livro que está parado.</h3>
             </div>
             <div id="exercicios" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid">
+                <img src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid"> <!--EXERCÍCIO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Comece a exercitar-se.</h3>
             </div>
             <div id="pao" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/PAO-1-8.png" class="mx-auto d-block img-fluid">
+                <img src="images/PAO-1-8.png" class="mx-auto d-block img-fluid"> <!--PÃO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Aprender a fazer pão.</h3>
             </div>
             <div id="amigos" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid">
+                <img src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid"> <!--AMIGOS-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Mais tempo com sua família e amigos.</h3>
             </div>
 		</div>
 		
-		<div class="container-sm|md|lg|xl text-center container-fluid">
+		<div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block row" id="contador">
 			<p id="demo"></p>
 		</div>
 
-        <div class="container-sm|md|lg|xl text-center container-fluid row" id="controleSeuTempo">
+        <div class="container-sm|md|lg|xl text-center container-fluid mx-auto row" id="controleSeuTempo">
                 <div class="container-sm|md|lg|xl col-6 raw">
                     <div class="container-sm|md|lg|xl"><h1 id="controleTempo">CONTROLE SEU TEMPO!</h1></div>
-                        <img src="images/SUN-8.png" class="mx-auto d-block img-fluid col-sm-2 float-left">
-                        <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Técnicas leves e produtivas para sua rotina</h2></div>
-                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto d-block img-fluid col-sm-2 float-left"></div>
+                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                        <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2 style="padding-left: 2px;">Técnicas leves e produtivas para sua rotina</h2></div>
+                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Dicas de apps para você fazer o que mais gosta</h2></div>
-                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto d-block img-fluid col-sm-2 float-left"></div>
+                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Faça como grandes empresas e priorize</h2></div>
                 </div>
                 <div class="container-sm|md|lg|xl col-6" id="containerForm">
@@ -189,7 +187,7 @@
                             <br><br>
                             <button type="submit" class="btn btn-dark btn-block col-sm-6 mx-auto d-block" style="font-family: 'Roboto', sans-serif; border-radius: 5px; background-color: #761498; font-weight: 400; text-transform: uppercase; border: none;">
                                 <span class="spinner-grow spinner-grow-sm"></span>
-                                Eu quero mudar!
+                                Quero receber
                             </button>
                             <br><br>
                         </form>
