Nova versão mobile

--- a/mobile.html
+++ b/mobile.html
@@ -19,7 +19,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
 	<!--PRELOADS-->
-	<link rel="preload" href="css/style.css" as="style">
+	<link rel="preload" href="css/mobile.css" as="style">
 	<link rel="preload" href="js/script.js" as="script">
 	<link rel="preload" href="css/bootstrap.min.css" as="style">
 	<link rel="preload" href="js/bootstrap.min.js" as="script">
@@ -28,7 +28,7 @@
 	<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mobile.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 	<!-- Scripts -->
@@ -88,6 +88,73 @@
 </head>
 <body>
   
+	<!--CABEÇALHO-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
+	<!--LOGO--><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto d-block img-fluid w-25 h-25"> 
+	</div>
+
+	<!--CONTAINER 1-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container1">
+		<!--CHAMADA 1--><h1 id="chamada1">O que você quer fazer mas não cabe nas suas 24h?</h1> 
+		<!--CHAMADA 2--><h2 id="chamada2">Organize sua rotina e melhore a qualidade de vida!</h2>
+		<!--RELOGIO--><img id="relogio" src="images/relogio.png" class="img-fluid mx-auto d-block">
+	</div>
+
+	<!--CONTAINER 2-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container2">
+		<!--MARATONA BELOVED--><h1 id="maratonaBeloved">Maratona Beloved</h1>
+		<!--TRES EMAILS--><h1 id="tresEmails">Três emails gratuitos para organizar seu tempo e aproveitar atividades</h1>
+		<!--LIVRO IMG--><img id="ativImg" src="images/LIVRO-1-8.png" class="img-fluid mx-auto d-block">
+		<!--LIVRO TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+		<!--EXERCICIO IMG--><img id="ativImg" src="images/EXERCICIO-1-8.png" class="img-fluid mx-auto d-block">
+		<!--EXERCICIO TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+		<!--AMIGOS IMG--><img id="ativImg" src="images/AMIGOS-1-8.png" class="img-fluid mx-auto d-block">
+		<!--AMIGOS TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+	</div>
+
+	<!--CONTAINER 3-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container3">
+		<!--CONTROLE SEU TEMPO--><h1 id="controleTempo">Controle seu tempo</h1>
+		<!--SUN--><img src="images/SUN-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+		<!--TECNICAS--><h2 id="dicas">Técnicas leves e produtivas para sua rotina!</h2>
+		<!--POINTER--><img src="images/TOUCH-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+		<!--DICAS--><h2 id="dicas">Dicas de apps para você fazer o que mais gosta!</h2>
+		<!--PRANCHETA--><img src="images/PRANCHETA-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+		<!--EMPRESAS--><h2 id="dicas">Faça como grande empresas e priorize</h2>
+	</div>
+
+	<!--CONTAINER 4-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container4">
+		<!--CONTADOR--><p id="demo"></p>
+	</div>
+
+	<!--CONTAINER 5-->
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container5">
+		<!--RECEBA--><h1 id="receba">Receba o conteúdo gratuitamente</h1>
+		<!--FORMULARIO-->
+		<form method="POST" action="https://smtl.gama.academy/leads/bfeebc01-b7e1-11ea-8228-89cff86db9a0" class="needs-validation mx-auto d-block" id="myForm" novalidate>
+                            
+			<div class="form-group has-error">
+				<input name="name" type="text" class="col-sm-10 mx-auto d-block form-control" pattern="^\D{2,}\s[\D\s]{2,}$" title="Digite seu nome completo" placeholder="Coloque seu nome aqui" style="font-family: 'Roboto', sans-serif; border-radius: 10px; border-color: #761498;" required/>
+				<div class="valid-feedback">Nome Válido</div>
+				<div class="invalid-feedback">Por favor, digite seu nome completo</div>
+			</div>
+			<div class="form-group">
+				<input name="email" type="email" class="col-sm-10 mx-auto d-block form-control" style="border-radius: 10px; border-color: #6316a3;" title="Digite um email válido" placeholder="Informe seu email" required/>	
+				<div class="valid-feedback">Email Válido.</div>
+				<div class="invalid-feedback">Por favor, digite um email válido.</div>
+			</div>
+			<input name="redirectTo" type="hidden" value="https://amadx.com.br/tnks_1.html" />
+			<br><br>
+			<button type="submit" class="btn btn-dark btn-block col-sm-6 mx-auto d-block" style="font-family: 'Roboto', sans-serif; border-radius: 10px; background-color: #6316a3; font-weight: 400; border: none;">
+				Quero receber
+			</button>
+			<br><br>
+		</form>
+		<!--SOCIAL MEDIA-->
+		<!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"></a><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+		<!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>
+	</div>
 
 
 </body>
