--- a/mobile.html
+++ b/mobile.html
@@ -152,7 +152,7 @@
 			<br><br>
 		</form>
 		<!--SOCIAL MEDIA-->
-		<!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"></a><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+		<!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
 		<!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>
 	</div>
 
