--- a/mobile.html
+++ b/mobile.html
@@ -107,9 +107,11 @@
 		<!--LIVRO IMG--><img id="ativImg" src="images/LIVRO-1-8.png" class="img-fluid mx-auto d-block">
 		<!--LIVRO TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
 		<!--EXERCICIO IMG--><img id="ativImg" src="images/EXERCICIO-1-8.png" class="img-fluid mx-auto d-block">
-		<!--EXERCICIO TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+		<!--EXERCICIO TEXT--><h1 id="ativText">Praticar exercícios físicos</h1>
+		<!--PAO IMG--><img id="ativImg" src="images/PAO-1-8.png" class="img-fluid mx-auto d-block">
+		<!--PAO TEXT--><h1 id="ativText">Fazer pão</h1>
 		<!--AMIGOS IMG--><img id="ativImg" src="images/AMIGOS-1-8.png" class="img-fluid mx-auto d-block">
-		<!--AMIGOS TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+		<!--AMIGOS TEXT--><h1 id="ativText">Aproveitar o tempo com amigos e família</h1>
 	</div>
 
 	<!--CONTAINER 3-->
