--- a/mobile.html
+++ b/mobile.html
@@ -87,7 +87,7 @@
 
 </head>
 <body>
-  
+	
 	<!--CABEÇALHO-->
 	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
 	<!--LOGO--><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto d-block img-fluid w-25 h-25"> 
@@ -95,10 +95,14 @@
 
 	<!--CONTAINER 1-->
 	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container1">
-		<!--CHAMADA 1--><h1 id="chamada1">O que você quer fazer mas não cabe nas suas 24h?</h1> 
-		<!--CHAMADA 2--><h2 id="chamada2">Organize sua rotina e melhore a qualidade de vida!</h2>
-		<!--RELOGIO--><img id="relogio" src="images/relogio.png" class="img-fluid mx-auto d-block">
+		<!--CHAMADA 1--><h1 id="chamada1" class="mx-auto d-block">O que você quer fazer mas não cabe nas suas 24h?</h1> 
+		<!--CHAMADA 2--><h2 id="chamada2" class="mx-auto d-block">Organize sua rotina e melhore a qualidade de vida!</h2>
 	</div>
+	
+	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="containerRelogio">
+		<!--RELOGIO--><img id="relogio" src="images/relogio.png" class="img-fluid mx-auto">
+	</div>
+	
 
 	<!--CONTAINER 2-->
 	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container2">
