finalizando tnks mobile

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -99,13 +99,13 @@
             <h1 id="fra1" class="mx-auto d-block"><strong>Desejamos Boas - Vindas!</strong></h1>
         </div>
         <div class="container-fluid row">
-            <h5 id="fra2" class="mx-auto d-block">O primeiro passo de grande mudanças foi realizado.</h6>
+            <h5 id="fra2" class="mx-auto d-block">O primeiro passo de grandes mudanças foi realizado.</h6>
         </div>
         <div class="container-fluid row">
             <h5 id="fra" class="mx-auto d-block">Na sexta-feira, você receberá o primeiro e-mail da maratona.</h6>
         </div>
         </div>
-
+    <!-- BACKGROUND MAIS BTN-->
     <div id="intro2" class="jumbotron text-left">
         <div class="container-fluid row">
             <h5 id="fra3" class="">Compartilhe essa ideia.</h6>
