--- a/mobile.html
+++ b/mobile.html
@@ -98,9 +98,9 @@
 		<!--CHAMADA 1--><h1 id="chamada1" class="mx-auto d-block">O que você quer fazer mas não cabe nas suas 24h?</h1> 
 		<!--CHAMADA 2--><h2 id="chamada2" class="mx-auto d-block">Organize sua rotina e melhore a qualidade de vida!</h2>
 	</div>
-	
+
 	<div class="container-fluid container-sm|md|lg|xl mx-auto" id="containerRelogio">
-		<!--RELOGIO--><img id="relogio" src="images/relogio.png" class="img-fluid mx-auto">
+		<!--RELOGIO--><img id="relogio" src="images/relogio-min.png" class="img-fluid mx-auto">
 	</div>
 	
 
