--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
     </head>
     <body>
         <!--CABEÇALHO-->
-	    <div class="container-fluid container-sm|md|lg|xl mx-auto row" id="cabecalho">
-            <div class="col-4"><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto float-left img-fluid w-50"></div>
-            <div class="col-6"><br></div>
-            <div class="col-1"><a href="https://www.facebook.com/Amadx-110455760724284"><img id=""facebook" src="images/FACE-8.png" class="img-fluid w-50 float-right" style="margin-top: 20px;"></a></div>
-            <div class="col-1"><a href="http://instagram.com/amadx_br"><img id="instagram" src="images/INSTA-8.png" class="img-fluid w-50 float-left" style="margin-top: 20px;"></a></div>	
+	    <div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
+            <!--LOGO-->
+            <span><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto img-fluid w-50 float-left"></span>
+            <!--SOCIAL MEDIA-->
+		    <!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+		    <!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>	
         </div>
 
         <div class="container-sm|md|lg|xl row mx-auto" id="banner1">
