--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="container-sm|md|lg|xl"><h2 id="chamadaDesktop2" class="col-10">Organize sua rotina e melhore a qualidade de vida!</h2></div>
             </div>
             <div id="relogio" class="container-sm|md|lg|xl mx-auto col-6">
-                <img src="images/relogio.png" id="clock" class="img-fluid mx-auto d-block bottom">
+                <!--RELOGIO--><img src="images/relogio.png" id="clock" class="img-fluid mx-auto d-block bottom">
             </div>
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block">
@@ -136,35 +136,35 @@
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid row" id="activities">
             <div id="livro" class="container-sm|md|lg|xl col-3 text-center mx-auto d-block">
-                <img src="images/LIVRO-1-8.png" class="mx-auto d-block img-fluid"> <!--LIVRO-->
+                <!--LIVRO--><img src="images/LIVRO-1-8.png" class="mx-auto d-block img-fluid"> <!--LIVRO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Ler aquele livro que está parado.</h3>
             </div>
             <div id="exercicios" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid"> <!--EXERCÍCIO-->
+                <!--EXERCICIO--><img src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid"> <!--EXERCÍCIO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Comece a exercitar-se.</h3>
             </div>
             <div id="pao" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/PAO-1-8.png" class="mx-auto d-block img-fluid"> <!--PÃO-->
+                <!--PAO--><img src="images/PAO-1-8.png" class="mx-auto d-block img-fluid"> <!--PÃO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Aprender a fazer pão.</h3>
             </div>
             <div id="amigos" class="container-sm|md|lg|xl text-center col-3">
-                <img src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid"> <!--AMIGOS-->
+                <!--AMIGOS--><img src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid"> <!--AMIGOS-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Mais tempo com sua família e amigos.</h3>
             </div>
 		</div>
 		
 		<div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block row" id="contador">
-			<p id="demo"></p>
+			<!--CONTADOR--><p id="demo"></p>
 		</div>
 
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto row" id="controleSeuTempo">
                 <div class="container-sm|md|lg|xl col-6 raw">
                     <div class="container-sm|md|lg|xl"><h1 id="controleTempo">CONTROLE SEU TEMPO!</h1></div>
-                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                        <!--SUN--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2 style="padding-left: 2px;">Técnicas leves e produtivas para sua rotina</h2></div>
-                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                        <!--TOUCH--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Dicas de apps para você fazer o que mais gosta</h2></div>
-                        <div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                        <!--PRANCHETA--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                         <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Faça como grandes empresas e priorize</h2></div>
                 </div>
                 <div class="container-sm|md|lg|xl col-6" id="containerForm">
