--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 gtag('config', 'AW-792854533');
             </script>
 
+            <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=476ea5ec8e45f' async='true'></script> 
     </head>
     <body>
         
